--- a/index.Rmd
+++ b/index.Rmd
@@ -10,7 +10,7 @@ output:
 description: "This is a collection of notes on plants, growing plants, soil, water, plant nutrients, .... The output format is bookdown::gitbook."
 ---
 
-# The Start
+# The Start {-}
 
 
 One has to start somewhere ....
