--- a/03-glossary-plants.Rmd
+++ b/03-glossary-plants.Rmd
@@ -2,6 +2,10 @@
 
 A motley collection of plant-related terms
 
-**front-line salt tolerant** This refers to plants that can tolerate full coastal exposure and that have foliage that can withstand salt spray and salt-laden winds (Reference for front-line and second-line salt tolerance: https://www.austplants.com.au/resources/Pictures/Central%20Coast%20District%20Group/4COSTALP.pdf).
+**front-line salt tolerant** This refers to plants that can tolerate full coastal exposure and that have foliage that can withstand salt spray and salt-laden winds 
+
+(Reference for front-line and second-line salt tolerance: https://www.austplants.com.au/resources/Pictures/Central%20Coast%20District%20Group/4COSTALP.pdf
+
+For NSW central coast plant lists, also see https://www.austplants.com.au/resources/Documents/Central-Coast-Documents/Fact%20Sheets/Coastal%20Plants%20v4%20HM%20and%20v4%20BM.pdf).
 
 **second-line salt tolerant** This refers to plants that can tolerate moderate coastal exposure and that grow best if protected from salt-laden winds.  In exposed positions on the coast, they could be grown behind a protective screen of front-line salt tolerant plants.
