--- a/04-resources.Rmd
+++ b/04-resources.Rmd
@@ -1,5 +1,7 @@
 # Resources
 
+## Weeds
+
 NSW Department of Primary Industries has lots of useful things. The starting point is:
 
 https://www.dpi.nsw.gov.au/biosecurity/weeds
