--- a/05-glossary-plants.Rmd
+++ b/05-glossary-plants.Rmd
@@ -6,6 +6,8 @@
 
 **native** if a plant is native to a particular area, it occurs naturally in that area but is not confined to that area
 
+<br>
+
 **front-line salt tolerant** This refers to plants that can tolerate full coastal exposure and that have foliage that can withstand salt spray and salt-laden winds 
 
 (Reference for front-line and second-line salt tolerance: https://www.austplants.com.au/resources/Pictures/Central%20Coast%20District%20Group/4COSTALP.pdf
@@ -21,8 +23,6 @@ For NSW central coast plant lists, also see https://www.austplants.com.au/resour
 - Wood or wood products from flowering trees (broad-leaved tree species), such as eucalypts, irrespective of the physical hardness of the wood (https://www.agriculture.gov.au/abares/forestsaustralia/glossary/search?name_1=Hardwood).
 - Another (horticultural) definition: Wood that undergoes secondary growth
 
-<br>
-
 **softwood**
 
 - Wood or wood products from conifers, irrespective of the physical softness of the wood.
@@ -34,5 +34,11 @@ For NSW central coast plant lists, also see https://www.austplants.com.au/resour
 **potting up** This is moving seedlings or rooted cuttings to their first pot.
 
 **potting on, growing on** This is moving a plant that has outgrown its pot into a larger pot.
+
+<br>
+
+**monoecious** a species of plant that has separate female and male flowers on the **same** plant (from mon(o)-, one, and Greek oikon, house - pronounced with three syllables, mo-'noe-cious).
+
+**dioecious** a species of plant that has separate female and male flowers, with each type on **separate** plants (from di-, two, and Greek oikon, house - pronounced with three syllables, di-'oe-cious).
 
 
