Edits to glossary

--- a/05-glossary-plants.Rmd
+++ b/05-glossary-plants.Rmd
@@ -41,4 +41,13 @@ For NSW central coast plant lists, also see https://www.austplants.com.au/resour
 
 **dioecious** a species of plant that has separate female and male flowers, with each type on **separate** plants (from di-, two, and Greek oikon, house - pronounced with three syllables, di-'oe-cious).
 
+<br>
+
+**shrub** a woody plant less than 8 metres tall, often with many stems that arise at or near the base
+
+**tree** a woody plant more than 5 metres tall, usually with a single stem
+
+(https://www.anbg.gov.au/aust-veg/veg-map.html)
+
+
 
