--- a/02-plants.Rmd
+++ b/02-plants.Rmd
@@ -60,6 +60,50 @@ Primary growth results from cell division in the tips of the stem and roots and 
 Secondary growth results from cell division in the cambium, producing xylem on the inside and phloem on the outside and so causing the stem to thicken. Secondary growth occurs in dicots and gymnosperms but not usually in monocots. Monocots may have "anomalous secondary growth". Palms, for example, increase their stem diameter by parenchyma cells dividing and enlarging, a process where no secondary xylem or phloem is formed (https://en.wikipedia.org/wiki/Secondary_growth). Parenchyma cells are a type of *ground tissue*, which is tissue that is not on the external surface of plants or part of vascular tissue. It's a type of "filler" tissue in the soft parts of plants (https://en.wikipedia.org/wiki/Ground_tissue). There are different types of anomalous secondary growth in other monocots.
 
 
+<br>
+
+## Plant characteristics
+
+When talking about the type and life form of a plant, move from left to right through the characteristics below.
+
+|  Lifetime  | Primary/Secondary Growth |            |
+|:----------:|:------------------------:|:----------:|
+| Annual     |            |  Grow, flower, seed and die in one year or less |
+|            |            |             |
+| Perennial  |  Softwood  |  Evergreen  |
+| Perennial  |  Softwood  |  Herbaceous |
+|            |            |             |
+| Perennial  |  Hardwood  |  Trees, shrubs, climbers |
+
+<br>
+
+When describing the features of a plant, do it in the order below for consistency!
+
+**Habit**
+
+- include stem characteristics
+
+
+**Leaf**
+
+- arrangement
+- shape
+- size
+- margin type
+- texture and surfaces
+- colour
+- scent
+
+**Flowers**
+
+- inflorescence type
+- position
+- flower shape
+- size
+- colour
+- scent
+- season
+
 
 
 
